--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ewert">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pacifico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Varela+Round">
-    <link rel="stylesheet" href="assets/css/styles.min.css?h=75ea80f9da442acdfcbf94ca4fb0e057">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
+    <link rel="stylesheet" href="assets/css/styles.min.css?h=9e11d76fedf27bf44833ac34148e1bbd">
 </head>
 
 <body style="background-color: rgb(255,245,0);background-image: url(&quot;assets/img/fondo.svg?h=2fa73271090ddda5c5634e2cbecc6f6b&quot;);background-position: bottom;background-size: cover;background-repeat: repeat-y;margin: 0px;">
@@ -116,7 +117,8 @@
                     <!-- Start: Intro -->
                     <div class="intro">
                         <h2>Contenido libre<br></h2>
-                        <p style="color: rgb(0,0,0);">Este contenido es de libre uso, distribución y modificación sin usos comerciales. Puedes descargarlo, usarlo y compartirlo. <br></p><a class="btn btn-primary" role="button" href="#">Código fuente y recursos</a></div>
+                        <p style="color: rgb(0,0,0);">Este contenido es de libre uso, distribución y modificación sin usos comerciales. Puedes descargarlo, usarlo y compartirlo. <br></p><a class="btn btn-primary" role="button" href="https://github.com/juanfacundouf/parasalvarelplaneta"
+                            target="_blank">Código fuente y recursos</a></div>
                     <!-- End: Intro -->
                 </div>
                 <div class="col-sm-4">
@@ -128,6 +130,27 @@
         </div>
     </div>
     <!-- End: git-hub -->
+    <!-- Start: Lightbox Gallery -->
+    <div class="photo-gallery" style="background-color: rgba(0,0,0,0.55);">
+        <div class="container">
+            <!-- Start: Intro -->
+            <div class="intro">
+                <h2 class="text-center" style="color: rgb(227,255,113);">Para compartir<br></h2>
+                <p class="text-center" style="color: rgb(255,255,255);">Todo el contenido de este sitio se encuentra también en estas &nbsp;imágenes diseñadas para ser compartidas por redes sociales o pare realizar trabajos educativos.&nbsp;<br></p>
+            </div>
+            <!-- End: Intro -->
+            <!-- Start: Photos -->
+            <div class="row photos">
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/menos-carne-01.png?h=dc7bd9d3fc911d335b08c35d3d330c8f"><img class="img-fluid" src="assets/img/menos-carne-01.svg?h=fc30b99ceee16c1ce7eb63f5c00d21bb"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/menos-carne-02.png?h=4af6c620126c527486fc203992448af9"><img class="img-fluid" src="assets/img/menos-carne-02.svg?h=67419576025195b6da5d5c33e449b4c4"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/menos-carne-03.png?h=87e1b8d36bca34b26f41a30ab019d24c"><img class="img-fluid" src="assets/img/menos-carne-03.svg?h=c1612ea74cc1ba7a22cf3e3607412269"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/menos-carne-04.png?h=d9dbf82bb743e7d80674a6ad25bc1ec5"><img class="img-fluid" src="assets/img/menos-carne-04.svg?h=1ffa0bdc9e65dc05ce5a4f91a62a3470"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/menos-carne-05.png?h=c081b358b7176f9f380e499ad0b7913d"><img class="img-fluid" src="assets/img/menos-carne-05.svg?h=d9ee7ecbd9c84893a689f2cc7f1fb881"></a></div>
+            </div>
+            <!-- End: Photos -->
+        </div>
+    </div>
+    <!-- End: Lightbox Gallery -->
     <!-- Start: barra -->
     <div data-bs-parallax-bg="true" style="height: 50px;background-image: url(&quot;assets/img/separador.svg?h=b366a1700ea3a2be1760ccbee9153c51&quot;);background-position: center;background-size: cover;margin-bottom: 11px;margin-top: 11px;"></div>
     <!-- End: barra -->
@@ -153,6 +176,7 @@
     <!-- End: Footer -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox.min.js"></script>
     <script src="assets/js/script.min.js?h=2c06a6bcb241260914872f5ba5685e71"></script>
 </body>
 
