--- a/index.html
+++ b/index.html
@@ -8,16 +8,39 @@
     <link rel="icon" type="image/png" sizes="334x334" href="assets/img/favicon.png?h=82df53953d98b87cf5ff1799524a2b2e">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bangers">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bungee+Outline">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ewert">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pacifico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Varela+Round">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
-    <link rel="stylesheet" href="assets/css/styles.min.css?h=9e11d76fedf27bf44833ac34148e1bbd">
+    <link rel="stylesheet" href="assets/css/styles.min.css?h=4b3148567096279380dde78c69b86b1d">
 </head>
 
-<body style="background-color: rgb(255,245,0);background-image: url(&quot;assets/img/fondo.svg?h=2fa73271090ddda5c5634e2cbecc6f6b&quot;);background-position: bottom;background-size: cover;background-repeat: repeat-y;margin: 0px;">
-    <div></div>
+<body style="background-color: rgb(255,245,0);background-image: url(&quot;assets/img/fondo.svg?h=2fa73271090ddda5c5634e2cbecc6f6b&quot;);background-position: top;background-size: auto;background-repeat: repeat-y;margin: 0px;">
+    <!-- Start: Header -->
+    <div>
+        <div class="header-dark" style="background-image: url(&quot;assets/img/fondo.svg?h=2fa73271090ddda5c5634e2cbecc6f6b&quot;);">
+            <nav class="navbar navbar-dark navbar-expand-md navigation-clean-search">
+                <div class="container"><a class="navbar-brand" style="color: rgb(123,123,123);" href="#">Para salvar el planeta</a></div>
+            </nav>
+            <div class="container hero">
+                <div class="row">
+                    <div class="col-md-1 col-lg-2 d-none d-sm-none d-md-none d-lg-inline"></div>
+                    <div class="col-sm-3 col-md-4 col-lg-3 d-none d-sm-none d-md-inline"><img class="img-fluid" src="assets/img/vaca-fabrica.svg?h=1fc46cec42a559d81ecce074cfcb75d7"></div>
+                    <div class="col-md-8 col-lg-5">
+                        <h1 class="display-4" style="font-family: Bangers, cursive;color: rgb(0,0,0);">¿Qué relación existe entre consumir carne y el calentamiento global?<br></h1>
+                    </div>
+                    <div class="col-md-1 col-lg-2 d-none d-sm-none d-md-none d-lg-inline"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End: Header -->
+    <!-- Start: barra -->
+    <div data-bs-parallax-bg="true" style="height: 73px;background-image: url(&quot;assets/img/separador.svg?h=b366a1700ea3a2be1760ccbee9153c51&quot;);background-position: center;background-size: cover;margin-bottom: 11px;margin-top: 11px;"></div>
+    <!-- End: barra -->
     <!-- Start: separador -->
     <div class="highlight-phone" style="background-color: rgba(238,244,247,0.6);">
         <div class="container">
@@ -131,7 +154,7 @@
     </div>
     <!-- End: git-hub -->
     <!-- Start: Lightbox Gallery -->
-    <div class="photo-gallery" style="background-color: rgba(0,0,0,0.55);">
+    <div class="photo-gallery" style="background-color: rgba(0,0,0,0.45);">
         <div class="container">
             <!-- Start: Intro -->
             <div class="intro">
