con más efectos

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ewert">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pacifico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Varela+Round">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
     <link rel="stylesheet" href="assets/css/styles.min.css?h=4b3148567096279380dde78c69b86b1d">
 </head>
@@ -28,9 +30,9 @@
             <div class="container hero">
                 <div class="row">
                     <div class="col-md-1 col-lg-2 d-none d-sm-none d-md-none d-lg-inline"></div>
-                    <div class="col-sm-3 col-md-4 col-lg-3 d-none d-sm-none d-md-inline"><img class="img-fluid" src="assets/img/vaca-fabrica.svg?h=1fc46cec42a559d81ecce074cfcb75d7"></div>
+                    <div class="col-sm-3 col-md-4 col-lg-3 d-none d-sm-none d-md-inline"><img class="img-fluid" data-aos="slide-down" data-aos-duration="50" data-aos-once="true" src="assets/img/vaca-fabrica.svg?h=1fc46cec42a559d81ecce074cfcb75d7"></div>
                     <div class="col-md-8 col-lg-5">
-                        <h1 class="display-4" style="font-family: Bangers, cursive;color: rgb(0,0,0);">¿Qué relación existe entre consumir carne y el calentamiento global?<br></h1>
+                        <h1 class="display-4" data-aos="slide-down" data-aos-duration="50" data-aos-delay="50" style="font-family: Bangers, cursive;color: rgb(0,0,0);">¿Qué relación existe entre consumir carne y el calentamiento global?<br></h1>
                     </div>
                     <div class="col-md-1 col-lg-2 d-none d-sm-none d-md-none d-lg-inline"></div>
                 </div>
@@ -39,10 +41,10 @@
     </div>
     <!-- End: Header -->
     <!-- Start: barra -->
-    <div data-bs-parallax-bg="true" style="height: 73px;background-image: url(&quot;assets/img/separador.svg?h=b366a1700ea3a2be1760ccbee9153c51&quot;);background-position: center;background-size: cover;margin-bottom: 11px;margin-top: 11px;"></div>
+    <div data-aos="flip-right" data-aos-duration="100" data-aos-delay="150" data-aos-once="true" style="height: 73px;background-image: url(&quot;assets/img/separador.svg?h=b366a1700ea3a2be1760ccbee9153c51&quot;);background-position: center;background-size: cover;margin-bottom: 11px;margin-top: 11px;"></div>
     <!-- End: barra -->
     <!-- Start: separador -->
-    <div class="highlight-phone" style="background-color: rgba(238,244,247,0.6);">
+    <div data-aos="fade-left" data-aos-duration="300" data-aos-once="true" class="highlight-phone" style="background-color: rgba(238,244,247,0.6);">
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
@@ -59,7 +61,7 @@
     </div>
     <!-- End: separador -->
     <!-- Start: cuatro-columnas -->
-    <div class="container" style="margin-bottom: 22px;">
+    <div class="container" data-aos="slide-right" data-aos-once="true" style="margin-bottom: 22px;">
         <div class="row">
             <div class="col">
                 <h2 class="text-center" style="font-family: Ewert, cursive;margin-top: 16px;">¿CUÁNTA AGUA CUESTA PRODUCIR CARNE?</h2>
@@ -80,7 +82,7 @@
     </div>
     <!-- End: cuatro-columnas -->
     <!-- Start: separador -->
-    <div class="highlight-phone" style="background-color: rgba(238,244,247,0.74);">
+    <div data-aos="slide-left" data-aos-once="true" class="highlight-phone" style="background-color: rgba(238,244,247,0.74);">
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
@@ -98,7 +100,7 @@
     </div>
     <!-- End: separador -->
     <!-- Start: cuatro-columnas -->
-    <div class="container" style="margin-bottom: 22px;">
+    <div class="container" data-aos="slide-right" data-aos-once="true" style="margin-bottom: 22px;">
         <div class="row">
             <div class="col-lg-6">
                 <div class="row">
@@ -130,10 +132,10 @@
     </div>
     <!-- End: cuatro-columnas -->
     <!-- Start: barra -->
-    <div data-bs-parallax-bg="true" style="height: 50px;background-image: url(&quot;assets/img/separador.svg?h=b366a1700ea3a2be1760ccbee9153c51&quot;);background-position: center;background-size: cover;margin-bottom: 11px;margin-top: 11px;"></div>
+    <div data-aos="flip-right" data-aos-once="true" style="height: 50px;background-image: url(&quot;assets/img/separador.svg?h=b366a1700ea3a2be1760ccbee9153c51&quot;);background-position: center;background-size: cover;margin-bottom: 11px;margin-top: 11px;"></div>
     <!-- End: barra -->
     <!-- Start: git-hub -->
-    <div class="highlight-phone" style="background-color: rgba(255,255,255,0.63);">
+    <div data-aos="slide-left" class="highlight-phone" style="background-color: rgba(255,255,255,0.63);">
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
@@ -154,7 +156,7 @@
     </div>
     <!-- End: git-hub -->
     <!-- Start: Lightbox Gallery -->
-    <div class="photo-gallery" style="background-color: rgba(0,0,0,0.45);">
+    <div data-aos="slide-right" data-aos-once="true" class="photo-gallery" style="background-color: rgba(0,0,0,0.45);">
         <div class="container">
             <!-- Start: Intro -->
             <div class="intro">
@@ -164,21 +166,21 @@
             <!-- End: Intro -->
             <!-- Start: Photos -->
             <div class="row photos">
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/menos-carne-01.png?h=dc7bd9d3fc911d335b08c35d3d330c8f"><img class="img-fluid" src="assets/img/menos-carne-01.svg?h=fc30b99ceee16c1ce7eb63f5c00d21bb"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/menos-carne-02.png?h=4af6c620126c527486fc203992448af9"><img class="img-fluid" src="assets/img/menos-carne-02.svg?h=67419576025195b6da5d5c33e449b4c4"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/menos-carne-03.png?h=87e1b8d36bca34b26f41a30ab019d24c"><img class="img-fluid" src="assets/img/menos-carne-03.svg?h=c1612ea74cc1ba7a22cf3e3607412269"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/menos-carne-04.png?h=d9dbf82bb743e7d80674a6ad25bc1ec5"><img class="img-fluid" src="assets/img/menos-carne-04.svg?h=1ffa0bdc9e65dc05ce5a4f91a62a3470"></a></div>
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/menos-carne-05.png?h=c081b358b7176f9f380e499ad0b7913d"><img class="img-fluid" src="assets/img/menos-carne-05.svg?h=d9ee7ecbd9c84893a689f2cc7f1fb881"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/menos-carne-01.png?h=dc7bd9d3fc911d335b08c35d3d330c8f"><img class="img-fluid" data-bs-hover-animate="pulse" src="assets/img/menos-carne-01.svg?h=fc30b99ceee16c1ce7eb63f5c00d21bb"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/menos-carne-02.png?h=4af6c620126c527486fc203992448af9"><img class="img-fluid" data-bs-hover-animate="pulse" src="assets/img/menos-carne-02.svg?h=67419576025195b6da5d5c33e449b4c4"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/menos-carne-03.png?h=87e1b8d36bca34b26f41a30ab019d24c"><img class="img-fluid" data-bs-hover-animate="pulse" src="assets/img/menos-carne-03.svg?h=c1612ea74cc1ba7a22cf3e3607412269"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/menos-carne-04.png?h=d9dbf82bb743e7d80674a6ad25bc1ec5"><img class="img-fluid" data-bs-hover-animate="pulse" src="assets/img/menos-carne-04.svg?h=1ffa0bdc9e65dc05ce5a4f91a62a3470"></a></div>
+                <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/menos-carne-05.png?h=c081b358b7176f9f380e499ad0b7913d"><img class="img-fluid" data-bs-hover-animate="pulse" src="assets/img/menos-carne-05.svg?h=d9ee7ecbd9c84893a689f2cc7f1fb881"></a></div>
             </div>
             <!-- End: Photos -->
         </div>
     </div>
     <!-- End: Lightbox Gallery -->
     <!-- Start: barra -->
-    <div data-bs-parallax-bg="true" style="height: 50px;background-image: url(&quot;assets/img/separador.svg?h=b366a1700ea3a2be1760ccbee9153c51&quot;);background-position: center;background-size: cover;margin-bottom: 11px;margin-top: 11px;"></div>
+    <div data-aos="flip-left" data-aos-once="true" style="height: 50px;background-image: url(&quot;assets/img/separador.svg?h=b366a1700ea3a2be1760ccbee9153c51&quot;);background-position: center;background-size: cover;margin-bottom: 11px;margin-top: 11px;"></div>
     <!-- End: barra -->
     <!-- Start: Footer -->
-    <div class="footer-basic" style="background-color: rgb(0,0,0);color: rgb(255,255,255);opacity: 0.72;">
+    <div data-aos="slide-up" data-aos-once="true" class="footer-basic" style="background-color: rgb(0,0,0);color: rgb(255,255,255);opacity: 0.72;">
         <footer>
             <!-- Start: Social Icons -->
             <div class="social"><a href="https://www.linkedin.com/in/facundouferer/" target="_blank"><i class="icon ion-social-linkedin"></i></a><a href="https://github.com/juanfacundouf" target="_blank"><i class="icon ion-social-github"></i></a><a href="https://twitter.com/facundouferer"
@@ -199,8 +201,9 @@
     <!-- End: Footer -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox.min.js"></script>
-    <script src="assets/js/script.min.js?h=2c06a6bcb241260914872f5ba5685e71"></script>
+    <script src="assets/js/script.min.js?h=2dd5f8506909b15728a8a4ccee36bccb"></script>
 </body>
 
 </html>
