corrección de color

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body style="background-color: rgb(255,245,0);background-image: url(&quot;assets/img/fondo.svg?h=2fa73271090ddda5c5634e2cbecc6f6b&quot;);background-position: top;background-size: auto;background-repeat: repeat-y;margin: 0px;">
     <!-- Start: Header -->
     <div>
-        <div class="header-dark" style="background-image: url(&quot;assets/img/fondo.svg?h=2fa73271090ddda5c5634e2cbecc6f6b&quot;);">
+        <div class="header-dark" style="background-image: url(&quot;assets/img/fondo.svg?h=2fa73271090ddda5c5634e2cbecc6f6b&quot;);background-color: rgb(255,245,0);">
             <nav class="navbar navbar-dark navbar-expand-md navigation-clean-search">
                 <div class="container"><a class="navbar-brand" style="color: rgb(123,123,123);" href="#">Para salvar el planeta</a></div>
             </nav>
